creating endpoint to show all users
