# app/Http/Controllers/Users/UserController.php
@@ -6,26 +6,31 @@ use App\Http\Controllers\Controller;
 use App\Http\Requests\CreateUserRequest;
 use App\Services\Users\CreateUserService;
 use App\Services\Gateway\CreateWalletService;
+use App\Services\Users\ShowUsersService;
 use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Request;
 use Throwable;
 
 class UserController extends Controller
 {
     protected $userService;
     protected $createWalletService;
+    protected $showUsersService;
 
     public function __construct(
         CreateUserService $createUserService,
-        CreateWalletService $createWalletService
+        CreateWalletService $createWalletService,
+        ShowUsersService $showUsersService
     ) {
         $this->userService         = $createUserService;
         $this->createWalletService = $createWalletService;
+        $this->showUsersService    = $showUsersService;
     }
 
     /**
      * @OA\Post(
      *     path="/api/users",
-     *     tags={"users"},
+     *     tags={"User"},
      *     summary="Create A New User",
      *     @OA\Response(
      *         response=200,
@@ -79,5 +84,28 @@ class UserController extends Controller
         }
 
         return response()->json($user);
+    }
+
+
+    /**
+     * @OA\Get(
+     *     path="/api/users",
+     *     tags={"User"},
+     *     summary="Get All Users",
+     *     @OA\Response(
+     *         response=200,
+     *         description="sucess"
+     *     ),
+     * )
+     */
+    public function show(): JsonResponse
+    {
+        try {
+            $users = $this->showUsersService->execute();
+        } catch (\Throwable $exception) {
+            return response()->json(['message' => $exception->getMessage()], $exception->getCode());
+        }
+
+        return response()->json($users);
     }
 }
