# storage/api-docs/api-docs.json
@@ -16,7 +16,7 @@
         "/api/transaction": {
             "post": {
                 "tags": [
-                    "transactions"
+                    "Transaction"
                 ],
                 "summary": "Send Money Between Accounts",
                 "operationId": "App\\Http\\Controllers\\Gateway\\TransactionController::create",
@@ -51,9 +51,9 @@
         "/api/transaction/{id}/rollback": {
             "post": {
                 "tags": [
-                    "transactions"
+                    "Transaction"
                 ],
-                "summary": "RollBack a transaction",
+                "summary": "RollBack a Transaction",
                 "operationId": "App\\Http\\Controllers\\Gateway\\TransactionController::rollback",
                 "parameters": [
                     {
@@ -76,7 +76,7 @@
         "/api/wallet/{id}": {
             "get": {
                 "tags": [
-                    "wallets"
+                    "Wallet"
                 ],
                 "summary": "Get A User Wallet",
                 "operationId": "App\\Http\\Controllers\\Gateway\\WalletController::show",
@@ -99,9 +99,21 @@
             }
         },
         "/api/users": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get All Users",
+                "operationId": "App\\Http\\Controllers\\Users\\UserController::show",
+                "responses": {
+                    "200": {
+                        "description": "sucess"
+                    }
+                }
+            },
             "post": {
                 "tags": [
-                    "users"
+                    "User"
                 ],
                 "summary": "Create A New User",
                 "operationId": "App\\Http\\Controllers\\Users\\UserController::create",
@@ -142,7 +154,7 @@
         "/api/user-types": {
             "get": {
                 "tags": [
-                    "users"
+                    "User"
                 ],
                 "summary": "Get All User Types",
                 "operationId": "App\\Http\\Controllers\\Users\\UserTypeController::show",
